<resources>
    <string name="app_name">Catalog Movie</string>
    <string name="offline_meesage">Tidak Ada koneksi internet</string>
    <string name="tyr_again_meesage">Coba lagi</string>
    <string name="data_not_found">Data Tidak Ditemukan</string>
    <string name="tx_search">Search</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Pengaturan</string>

    <string name="favorit">Favorit</string>

    <string name="language">Pilih Bahasa</string>
    <string name="language_in">Indonesia</string>
    <string name="language_en">Inggris</string>
    <string name="now_playing">Dedang Dimainkan</string>
    <string name="upcoming">Akan Datang</string>
    <string name="search">Cari</string>
    <string name="detail">Detail</string>
    <string name="share">Bagikan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fav_path">favorit</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="configure">Configure</string>
    <string name="empty_text">Result not found</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based
    on your message history
  </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="notification">Notification</string>
    <string name="pref_title_daily_notification">Daily Notification</string>
    <string name="pref_title_daily_update">Daily Update Movie</string>
    <string name="pref_title_allow_notification">Allow Notofication</string>
    <string name="action_settings_lang">Language</string>
    <string name="pref_notifications_daily_remember">allow_notifications_daily_remember</string>
    <string name="pref_notifications_daily_update">allow_notifications_daily_update</string>
    <string name="pref_change_language">pref_change_language</string>
    <string name="pref_notifications_daily_remember_time">pref_title_daily_notification_time</string>
    <string name="pref_notifications_daily_update_time">pref_title_daily_update_time</string>
    <string name="version_title">Version</string>
    <string name="pref_version">pref_version</string>
</resources>
