<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">
  <item
    android:id="@+id/nav_now_playing"
    android:icon="@drawable/ic_menu_slideshow"
    android:title="@string/now_playing"/>
  <item
    android:id="@+id/nav_upcoming"
    android:icon="@drawable/ic_menu_slideshow"
    android:title="@string/upcoming"/>
  <item
    android:id="@+id/nav_search"
    android:icon="@drawable/ic_search_white_24dp"
    android:title="@string/search"/>
  <item
    android:id="@+id/nav_show_fav"
    android:icon="@drawable/ic_favorite_white_24dp"
    android:title="@string/favorit"/>

  <item android:title="@string/language">
    <menu>
      <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/action_settings"/>

    </menu>
  </item>

</menu>
